// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid /> Debe de mostrar items cuando se cargan imagenes con useFethcGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__backInLeft"
  >
    Dragon ball
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en <GifGrid /> Debe de mostrarse correctamente  1`] = `
<Fragment>
  <h3
    className="animate__animated animate__backInLeft"
  >
    Dragon ball
  </h3>
  <p
    className="animate__animated animate_flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
